--- a/position/style.css
+++ b/position/style.css
@@ -1,1 +1,10 @@
 /* Add your CSS Below */
+.three div:nth-child(3){
+    position: absolute;
+    margin-left: 200px;
+    top: auto;
+    left: 65%;
+    bottom: -40%;
+    right: auto;
+}
+
