--- a/table/style.css
+++ b/table/style.css
@@ -1,1 +1,53 @@
 /* Add your CSS Below */
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/*Assignment*/
+.header {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10px;
+}
+.data {
+    display: flex;
+   justify-content: flex-end;
+   margin-top: 50px;
+}
+table {
+    border-collapse: collapse;
+    overflow: hidden;
+    border: .2px solid rgb(255,255,255);
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
+.header {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+.header__titles {
+    background-color: rgb(29, 75, 7);
+    color: white;
+    border-radius: 12px;
+}
+td, th {
+    text-align: right;
+    padding: 10px;
+}
+th {
+    padding-left: 70px;
+}
+.header__prices {
+    padding-left: 200px;
+}
+tr:nth-of-type(even) {
+    background-color: #dfdfdf;
+    border-bottom: .5px solid rgb(182, 182, 182);
+}
+table {
+    border-collapse: collapse;
+    overflow: hidden;
+    border-radius: 12px;
+    width: 50%;
+    margin: 40px;
+}
