--- a/position/style.css
+++ b/position/style.css
@@ -1,10 +1,28 @@
 /* Add your CSS Below */
-.three div:nth-child(3){
+.three div:nth-child(1){
+    position: fixed;
+    margin-left: 200px;
+    top: auto;
+    left: 70%;
+    bottom: 0%;
+    right: auto;
+}
+
+.two div:nth-child(3){
     position: absolute;
     margin-left: 200px;
     top: auto;
-    left: 65%;
-    bottom: -40%;
+    left: 30px;
+    bottom: 14%;
+    right: auto;
+}
+
+.one div:nth-child(2){
+    position: relative;
+    margin-left: 200px;
+    top: -20px;
+    left: -170px;
+    bottom: auto;
     right: auto;
 }
 
